---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: ????
  Info:
    - Fix beacons not supported notice
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2025. 06. 13
  Info:
    - Inflate the io buffers
    - Use the tried and tested item io buffers
    - Swap the bar for fake filters
    - Support copy pasting onto requesting chests
    - Fix requesting already present buildings/modules
    - Allow quality factories and force exports to fit
    - Fix copy paste crash when source is unconfigured
    - Disable fluid support pending implementation concerns
    - Cache statistics
    - Require factory planner version with quality buttons
    - Restrict factory districts
    - Cleanup factory district icon renderer
    - Provide factory info in the tooltip
    - Mod portal release
---------------------------------------------------------------------------------------------------
Version: 0.0.9
Date: 2025. 06. 12
  Info:
    - Get stuck trying to connect fluidboxes from everywhere
    - chatgtp my ass
    - Get the fluid positions code to behave
    - Allow pipe to grounds to be placed against the factory
    - Add a compound entity for the fluidboxes
    - Simplify localization
    - Route factory index changes through Buildings.set_factory_index
    - Fix building held factory over existing factory
    - Bug squashing
    - Prepare the triggers for ingredients & done
    - Run the minute crafter only when fulfilled
    - Fire a lua event each time the recipe completes
    - Setup the working & waiting toggle detection
    - Update the status text on the factory
    - Hide container contents from alt mode
    - Create an insert plan for the buildings and modules
    - Show the slot requirement/availability during exporting
    - Eject items when filter/bar no longer allows that slot
    - Fix copy paste getting the order wrong