@@ -1,8 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.1
-Date: ????
+Date: 2025. 06. 17
   Info:
     - Fix beacons not supported notice
+    - Fix unbuildable entity crash and disable gui logging
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 2025. 06. 13
